# singer-music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 03cad55066ed_change.py  12bc8e6eaaf6_add_models.py  2024_05_20_0919-7ed5152eebcd_add_models.py  891c433759da_add_price_to_music_and_add_purchase_.py  989e04ff0894_add_music_model.py  b4304aa83c25_add_tutorial_model.py  c407addf8639_set_big_integer_field_for_user_.py  dbf10fdecdf1_add_path_to_music_model.py  dc099007b936_change.py  f5cf29aa093f_set_price_required_to_music_model.py
bot/: callbacks.py  config.py  core.py  filters.py  pagination.py  utils.py
bot/core/: babel.py  conf.py  config.py  db.py  middleware.py
bot/handlers/: admin_music_handler.py  base_handler.py  guest_music_handler.py  main_handler.py  music_handler.py
bot/handlers/guest/: music_handler.py
bot/helpers/: main_helper.py
bot/keyboards/: base_keyboard.py  main_keyboard.py
bot/keyboards/admin/: main_keyboard.py
bot/keyboards/guest/: main_keyboard.py
bot/locales/ru/LC_MESSAGES/: messages.po
bot/models/: __init__.py  base_model.py  common_model.py  user_model.py
bot/states/: admin_states.py
