[tool.poetry]
name = "singer-music-bot"
version = "0.1.0"
description = ""
authors = ["Sirojiddin Yakubov <yakubov9791999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {extras = ["i18n"], version = "^3.4.1"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
